--- a/packages/docs/src/templates/component-usage.css
+++ b/packages/docs/src/templates/component-usage.css
@@ -3,7 +3,7 @@
   border-radius: 4px;
 	padding: .5rem .75rem;
 	width: 100%;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 .example__code code {
